Version 2.3
===========

* Added cpt.reg() function for changes in regression. Thanks to Harjit Hullait who coded the C backend for this whilst at the STOR-i doctoral training centre at Lancaster University. Thanks also to Simon Taylor who updated the documentation for cpt.reg() from an earlier version.

Version 2.2.5
=============
* Thanks to Toby Hocking for highlighting that when pen=0, BinSeg doesn't need to warn that ncpts=Q as this is by design. Warning for pen=0 removed.
* Thanks to Toby Hocking and his students for spotting that when minseglen=1 BinSeg would not allow the maximum Q.  This was due to a hardcoding of minseglen=2 in the check function.  This has been corrected.

Version 2.2.4
=============
* Updated check for 1D objects to also check for 1D arrays.  Thanks to Github user ChristopherEeles for highlighting the bug.
* Updated C code to be compliant with new CRAN flags

Version 2.2.3
=============
* Updated documentation to reflect that the changepoint is the last observation of a segment, not the first observation of a new segment as previously described. Thanks to Alex Bertram for reporting this.
* Added fuctionality for cpt.range into cpts to allow specification of ncpts.  Use as cpts(object,ncpts=X) to retrive the X changepoints segmentation from an object which has cpt.range class.  Thanks to Craig Faunce for the suggestion.
* Corrected parameter estimation for cpt.reg class so that sig2 contains the variance MLE per segment. This addresses a consistency issue with lm when evaluating logLik when no changepoints are found.  Thanks to Simon Taylor for spotting this.
* Correction bug in parameter estimation for cpt.var with cpt.range class when ncpts!=NA.  Previously this was using seg.len() function which returned NA for CROPS and incorrect segments lengths for BinSeg.  Thanks to David Krider for asking a question which led to this bug being identified.